auto number figs and tables

--- a/src/analysis/sandbox/model_explore/model_march.Rmd
+++ b/src/analysis/sandbox/model_explore/model_march.Rmd
@@ -1,7 +1,7 @@
 ---
 title: 'A "Tiered Explicit, Match, and Model" (**TEMM**) approach for nationwide water system boundary estimation'
 output: 
-  html_document:
+  bookdown::html_document2:
     highlight: zenburn
     code_folding: hide
     toc: true
@@ -61,6 +61,18 @@ dt_make <- function(x){
   )
 }
 
+# function to add consistent, auto-numbered table captions for DT objects
+f_make_caption <- function(tag, caption){
+  cat(
+    "<table width=100%>",
+    paste0("<caption>", 
+           "(#tab:", tag, ")", 
+           caption,
+           "</caption>"),
+    "</table>"
+  )
+}
+
 # converts a float to a string with appropriate commas
 format_bign <- function(x) formatC(x, big.mark = ",", format = "d")
 
@@ -88,7 +100,7 @@ This report builds on a previous technical memorandum (`eda_february.html`) that
 
 Below is a conceptual diagram of the three tiers in the TEMM approach. Tier 1 **explicit** boundaries always supersede Tier 2 **matched** proxy boundaries, which in turn always supersede Tier 3 **modeled** boundaries. Thus, the resulting the resulting water service boundary layer described in this report is combination of all three tiers, and depends on data availability for the water system, and whether or not it matches to a TIGER place.
 
-```{r conceptual model, echo = FALSE, fig.cap = "Fig 1. Conceptual diagram of water service boundary tiers"}
+```{r conceptual-model, echo = FALSE, fig.cap = "Conceptual diagram of water service boundary tiers"}
 include_graphics(here("docs/img/tiers_diagram.png"))
 ```
 
@@ -100,7 +112,7 @@ Finally, we encourage the reader to consider the TEMM water service boundary lay
 
 ## Data Sources
 
-Table 1. Data sources for TEMM layer.
+Data sources for the TEMM layer are shown below.
 
 | Data Source                                              | Description                                                                                                             | Link                                                                                                                                                                                                          |
 |-------------------|--------------------|---------------------------------|
@@ -116,7 +128,7 @@ Table 1. Data sources for TEMM layer.
 
 # Report outline
 
-```{r read temm}
+```{r read-temm}
 library(tidyverse)
 library(sf)
 library(fs)
@@ -276,23 +288,23 @@ About `r str_sub(pop$count, 1, 3)[1]` million people are covered by Tier 1 spati
 
 Together, around `r str_sub(sum((as.numeric(str_remove_all(pop$count[1:2], ",")))), 1, 3)` million people (`r sum(pop$prop[1:2])`% of the population) are covered by either a Tier 1 or a Tier 2a spatial boundary. This is an underestimation--because many systems assigned to Tier 2b are likely to be moved to Tier 2a with further refinement. However, until further development of rules to disaggregate Tier 2b into Tier 2a and Tier 3 boundary types are developed, we evaluate the accuracy conservatively. Therefore the remaining approximately `r str_split(pop$count[3:4], ",", simplify = TRUE)[1]` million people (`r sum(pop$prop[3:4])`%) represented in the layer are covered by a less accurate, Tier 2b or Tier 3 boundary. These results indicate relatively high confidence in the spatial accuracy of the resulting TEMM water boundary layer for a majority of the population served by community water systems.
 
-```{r temm nationwide pop kable}
+```{r temm-nationwide-pop-kable}
 pop %>% 
   kable(col.names = c("Tier", "Population count", 
                       "Population proportion (%)"), 
         align = rep("l", 3),
-        caption = "Table 2. Population coverage by tier") %>% 
+        caption = "Population coverage by tier") %>% 
   kableExtra::kable_styling(full_width = FALSE)
 ```
 
 Together, around `r sum(sys$count[1:2])` community water systems (`r sum(sys$prop[1:2])`% of systems in layer) are covered by either a Tier 1 or a Tier 2a spatial boundary. The remaining approximately `r sum(sys$count[3:4])` water systems (`r sum(sys$prop[3:4])`%) are covered by a Tier 2b or Tier 3 boundary.
 
-```{r temm nationwide cws kable}
+```{r temm-nationwide-cws-kable}
 sys %>% 
   kable(col.names = c("Tier", "CWS\ncount", 
                       "CWS\nproportion (%)"), 
         align = rep("l", 3),
-        caption = "Table 3. Community water system (CWS) coverage by tier") %>% 
+        caption = "Community water system (CWS) coverage by tier") %>% 
   kableExtra::kable_styling(full_width = FALSE)
 ```
 
@@ -306,7 +318,7 @@ Next, we show the proportion of population covered in the *final spatial layer* 
 -   Together, Tiers 2a/2b (teal and dark blue bars below) cover more population than Tier 3 across nearly all states. In some states, Tier 2a is more common than Tier 2b.\
 -   Tier 3 coverage (orange bars below) is not uniform across states. This implies that the Tier 2 matching algorithm may perform better in some states, and may depend on factors that vary across states, like centroid accuracy and water system type (e.g., municipal).
 
-```{r geofacet temm tier distribution per state, fig.cap = "Fig 2. TEMM Tier distribution by state"}
+```{r geofacet-temm-tier-distribution-per-state, fig.cap = "TEMM Tier distribution by state"}
 # dataframe for barplot geofacet: population prop served by each tier
 dg <- d %>% 
   group_by(primacy_agency_code) %>%
@@ -347,7 +359,7 @@ dg %>%
 
 Native American water systems are designated in their water system id (pwsid) by their respective EPA region. For a full map of EPA regions see [here](https://www.epa.gov/aboutepa/regional-and-geographic-offices). Below we show that most of these systems lack Tier 1 data and have generally higher proportion of Tier 3 data compared to state primacy codes.
 
-```{r facet temm distribution native american, fig.cap = "Fig 3. TEMM Tier distribution of systems in Native American territories-by EPA agency"}
+```{r facet-temm-distribution-native-american, fig.cap = "TEMM Tier distribution of systems in Native American territories-by EPA agency"}
 dg %>% 
   # filter to Native American primacy codes
   filter(! primacy_agency_code %in% c(state.abb, "DC")) %>% 
@@ -374,7 +386,10 @@ nam <- acws %>% filter(! primacy_agency_code %in% c(state.abb, "DC"),
 
 In total, of the `r nam` systems in Native American territories nationwide, the final database after data loss due to missing centroids represents `r nam_rep` (`r round(nam_rep/nam*100,2)`%) systems in Native American territories. A data table of the the above plots is provided below.
 
-```{r datatable temm tier distribution per state, fig.cap="Table 4. TEMM tier distribution by state"}
+```{r datatable-temm-tier-distribution-per-state, echo = FALSE}
+f_make_caption("datatable-temm-tier-distribution-per-state",
+               "TEMM tier distribution by state")
+
 dg %>% 
   mutate(
     prop  = ifelse(is.na(prop), 0, prop),
@@ -389,7 +404,7 @@ dg %>%
 
 Next, for each state, we quantify the proportion of systems in each Tier by water size based on population categories according to [EPA guidelines](https://echo.epa.gov/help/drinking-water-dashboard-help#:~:text=Very%20Small%20%C2%A0%20%C2%A0%20%C2%A0%20500,Very%20Large%C2%A0%C2%A0%C2%A0%C2%A0%C2%A0%20%3E100%2C000){target="_blank"}:
 
-```{r epa sys size}
+```{r epa-sys-size}
 tribble(
 ~`EPA classification`, ~`Population Size`,
  "Very Small",            "500 or less",
@@ -399,13 +414,13 @@ tribble(
  "Very Large",            ">100,000"
 ) %>% 
   kable(align = rep("l", 2),
-        caption = "Table 5. EPA system size categorization") %>% 
+        caption = "EPA system size categorization") %>% 
   kableExtra::kable_styling(full_width = FALSE)
 ```
 
 In states that lack Tier 1 boundaries, "Very Small" and "Small" systems tend to have higher proportions of Tier 3 boundaries (grey bars) compared to larger systems. This result is unsurprising because Tier 2 spatial matches hinge on connecting water systems to Census "Places" which tend to be more populous areas. We therefore expect that smaller systems lack a Tier 2 match, and are hence covered by Tier 3 boundaries. When Tier 1 data is present, it seems to cover all system sizes (i.e., CA, NJ, TX), with a slight bias towards covering larger systems (e.g., OK, WA, CT).
 
-```{r temm statewide system size, fig.cap = "Fig 4. TEMM Tier distribution by system size"}
+```{r temm-statewide-system-size, fig.cap = "TEMM Tier distribution by system size"}
 # water system size levels in table above
 size_lvls <- c("Very Small", "Small", "Medium", "Large", "Very Large")
 
@@ -454,7 +469,7 @@ dg2 %>%
 
 Repeating the above analysis for primacy codes indicating Native American territories, we see that Native American systems are generally small or very small according to EPA size classification.
 
-```{r temm statewide system size native american, fig.cap = "Fig 5. TEMM Tier distribution of systems in Native American territories-by system size"}
+```{r temm-statewide-system-size-native-american, fig.cap = "TEMM Tier distribution of systems in Native American territories-by system size"}
 dg2 %>% 
   filter(! primacy_agency_code %in% c(state.abb, "DC")) %>% 
   ggplot(aes(size_class, prop, fill = tier)) + 
@@ -475,7 +490,10 @@ dg2 %>%
 
 A data table of Tier categories across system sizes, nationwide, is provided below. Proportion represents the proportion of Tier within the size class.
 
-```{r datatable temm tier distribution by system size, fig.cap = "Table 6. TEMM Tier distribution by system size" }
+```{r datatable-temm-tier-distribution-by-system-size, echo = FALSE}
+f_make_caption("datatable-temm-tier-distribution-by-system-size",
+               "TEMM Tier distribution by system size")
+
 # dataframe for barplot geofacet: prop of each each tier per size class
 d %>% 
   mutate(
@@ -507,7 +525,10 @@ d %>%
 
 A data table of the the above plots, looking at Tier counts by primacy agency code, is provided below.
 
-```{r datatable temm tier distribution per state and system size, fig.cap = "Table 7. TEMM Tier distribution by system size and primacy agency code"}
+```{r datatable-temm-tier-distribution-per-state-and-system-size, echo = FALSE}
+f_make_caption("datatable-temm-tier-distribution-per-state-and-system-size",
+               "TEMM Tier distribution by system size and primacy agency code")
+
 dg2 %>% 
   mutate(
     prop  = ifelse(is.na(prop), 0, prop),
@@ -522,13 +543,13 @@ dg2 %>%
 
 The national water service boundary layer is too large (i.e., around 400 MB) to plot in this interactive report, thus we show a static map below to illustrate the coverage provided by the Tiers 1-3 in the proportions described above, and direct the reader to the TEMM spatial layer in the project repository.
 
-```{r temm nationwide wsb, fig.cap = "Fig 6. Nationwide TEMM water system boundary layer "}
+```{r temm-nationwide-wsb, fig.cap = "Nationwide TEMM water system boundary layer "}
 include_graphics(here("docs/img/temm-nation.png"))
 ```
 
 Here, we zoom into California, Nevada, and Oregon -- three states with high proportions of Tier 1, 2, and 3 spatial boundaries respectively. The Tier 3 circular buffers in this interactive map represent median (50th percentile) model estimates. Click on the layers icon to toggle between Tiers.
 
-```{r temm zoom ca nv or}
+```{r temm-zoom-ca-nv-or}
 # plot CA, NV, OR
 temm %>% 
   filter(primacy_agency_code %in% c("CA", "NV", "OR")) %>% 
@@ -544,7 +565,7 @@ Next, we review the construction of each Tier.
 
 Tier 1 boundaries are the most straightforward to understand: states provide explicit data, and when they do, these boundaries tend to cover nearly the entire population served by water systems. Tier 1 data *missingness* challenges the accuracy of downstream Tier 2 and 3 boundary estimates. At the time of writing, Tier 1 data is present for `r wsb_labeled_clean$state %>% unique() %>% length()` states (`r wsb_labeled_clean$state %>% unique() %>% sort() %>% paste(collapse = ", ")`).
 
-```{r tier 1 presence absence, fig.cap = "Fig 7. Presence/absence of explicit boundaries in US"}
+```{r tier-1-presence-absence, fig.cap = "Presence/absence of explicit boundaries in US"}
 # summarize missing and present states in a dataframe
 states_missing <- state.abb[!state.abb %in% unique(wsb_labeled_clean$state)]
 states_present <- unique(wsb_labeled_clean$state)
@@ -597,7 +618,7 @@ $$
 J = \frac{A_T \cap A_E }{A_E}
 $$ where $A_T \cap A_E$ is the intersection of the TIGER Place area ($A_T$) and the explicit Tier 1 water service boundary area ($A_E$). Thus, the quantity $J$ is a closed interval between 0 and 1, inclusive: $\{J \space \space | \space \space 0 \le J \le 1\}$. Importantly, $A_T$ can fall outside of $A_E$. The Jacard similarity $J$ measures the proportion of coverage that $A_T$ provides over $A_E$.
 
-```{r modified jacard similarity on tiger place match and labeled wsb}
+```{r modified-jacard-similarity-on-tiger-place-match-and-labeled-wsb}
 # Tier 2 TIGER geometries for explicit boundaries
 tiger <- path(staging_path, "tigris_places_clean.geojson") %>% 
   st_read(quiet = TRUE) %>% 
@@ -663,7 +684,7 @@ t1 <- read_rds(path(staging_path, "t1_jacard.rds"))
 
 We calculate that `r round(100*(nrow(filter(t1, jacard > 0))/nrow(t1)), 2)`% of Tier 2 matched Tiger Place boundaries spatially intersect their assigned explicit Tier 1 boundary (when present). The proportion of overlap (Modified Jacard) for the `r round(100*(nrow(filter(t1, jacard != 0))/nrow(t1)), 2)`% of intersecting Tier 1 and 2 geometries is generally left-skewed, which indicates high overlap. A Jacard of 1 indicates complete overlap (i.e., the TIGER Place sufficient covers the explicit water system boundary), a Jacard of 0.1 indicates that only 10% of the Tier 1 explicit boundary is covered by the Tier 2 boundary, and a Jacard of 0 indicates zero percent overlap (i.e., non-intersection).
 
-```{r jacard histogram, fig.cap = "Fig 8. Histogram of modified jacard similarity index"}
+```{r jacard-histogram, fig.cap = "Histogram of modified jacard similarity index"}
 t1 %>% 
   filter(jacard != 0) %>% 
   ggplot(aes(jacard)) +
@@ -674,7 +695,7 @@ t1 %>%
 
 `r round(100*(nrow(filter(t1, jacard == 0))/nrow(t1)), 2)`% of Tier 1 and 2 boundaries do not intersect, however we show that the vast majority of these geometries are very close to one another, which is unsurprising, as matches are constrained within state. The distribution of distance between centroids of non-intersecting matches is shown below.
 
-```{r jacard zeros how far from one another, fig.cap = "Fig 9. Distance between matched Tier 1 and Tier 2 polygon centroids"}
+```{r jacard-zeros-how-far-from-one-another, fig.cap = "Distance between matched Tier 1 and Tier 2 polygon centroids"}
 # a substantial portion (almost half) of matched tier 2 geoms don't intersect
 # tier 1 explicit boundaries but are they close by? calculate centroid distances
 t1_zero <- t1 %>% 
@@ -745,7 +766,7 @@ In this section of the report, we expand on important data pre-processing steps,
 
 The response variable (radius) from the `r length(unique(wsb_labeled_clean$state))` labeled Tier 1 states (`r paste(unique(wsb_labeled_clean$state), collapse = ", ")`) is right-skewed. The median radius is `r round(median(d$radius, na.rm = TRUE)*km_to_mi, 2)` mi, and the maximum radius is `r round(max(d$radius, na.rm = TRUE)*km_to_mi, 2)` mi Linear models assumes constant variance and normality, thus we log-transform the response to [stabilize its variance](https://en.wikipedia.org/wiki/Variance-stabilizing_transformation){target="_blank"}, enable regression and inference approaches, prevent high-leverage radii from exerting too much influence on the model fit, and disallow predicted negative radii.
 
-```{r radius tier 1 distribution, fig.cap = "Fig 10. Distribution of water system radius in Tier 1 systems"}
+```{r radius-tier-1-distribution, fig.cap = "Distribution of water system radius in Tier 1 systems"}
 d %>% 
   ggplot(aes(radius*km_to_mi)) + 
   geom_histogram(bins = 100, col = "white") +
@@ -759,7 +780,7 @@ The main drawback of log-transformation is that model coefficient units (e.g., s
 
 Moreover, to avoid over-fitting a model on a training set that over-represents the more common low-radius observations, we perform a *stratified random sample* on the response variable. This samples equal proportions of training observations from each of quartiles of the radius distribution, delineated by red dashed lines in the figure below.
 
-```{r stratified random sampling, fig.cap = "Fig 11. Distribution of system radii with quartiles"}
+```{r stratified-random-sampling, fig.cap = "Distribution of system radii with quartiles"}
 d %>% 
   # calculate quantiles to show stratified random sampling
   mutate(
@@ -785,7 +806,7 @@ Population served and service connections are highly correlated ($r$ $=$ `r roun
 
 [^7]: **Both dependent/response variable and independent/predictor variable(s) are log-transformed:** Interpret the coefficient as the percent increase in the dependent variable for every 1% increase in the independent variable. Example: the coefficient is 0.198. For every 1% increase in the independent variable, our dependent variable increases by about 0.20%. For x percent increase, calculate 1.x to the power of the coefficient, subtract 1, and multiply by 100. Example: For every 20% increase in the independent variable, our dependent variable increases by about (1.20 ^0.198^ -- 1) \* 100 = 3.7 percent.
 
-```{r correlation of service connections and pop served, fig.cap="Fig 12. Service connections vs. population served"}
+```{r correlation-of-service-connections-and-pop-served, fig.cap="Service connections vs. population served"}
 d %>% 
   ggplot(aes(population_served_count, service_connections_count)) + 
   geom_point(aes(color = owner_type_code), alpha = 0.2) +
@@ -800,7 +821,7 @@ d %>%
 
 Same as above, but broken down by owner type code, it is clear to see that this correlation persists across ownership types. Importantly, although we lack Tier 1 data for Native American systems (owner type code = "N"), the population and service connection scaling is present, and so models trained on different Tier 1 ownership types are likely to generalize well to these systems.
 
-```{r correlation of service connections and pop served facet, fig.cap="Fig 13. Service connections vs. population served, faceted"}
+```{r correlation-of-service-connections-and-pop-served-facet, fig.cap="Service connections vs. population served, faceted"}
 d %>% 
   ggplot(aes(population_served_count, service_connections_count)) + 
   geom_point(aes(color = owner_type_code), alpha = 0.2) +
@@ -831,7 +852,7 @@ Regression slopes differ for the service connections based on **owner type code*
 
 [^8]: There are 2 Tier 1 native american systems, which heavily impacts modeling: meaningful models can't be fit to data with only two observations. Thus, we re-code the 2 existing "N" systems to "M" to train the Tier 3 models. With the addition of an appreciable number (e.g., \> 50) labeled Tier 1 Native American boundaries, we can revert this re-coding step.
 
-```{r interaction owner type code, fig.cap="Fig 13. Interaction plot: owner type code vs. service connections"}
+```{r interaction-owner-type-code, fig.cap="Interaction plot: owner type code vs. service connections"}
 d %>% 
   # remove 2 "N" codes that are not meaningful
   filter(owner_type_code != "N") %>% 
@@ -852,7 +873,7 @@ d %>%
 
 As before with owner type code, wholesaler status interacts with service connections, thus we include an interaction effect for it in the linear model.
 
-```{r interaction wholesaler, fig.cap="Fig 14. Interaction plot: wholesaler vs. service connections"}
+```{r interaction-wholesaler, fig.cap="Interaction plot: wholesaler vs. service connections"}
 d %>% 
   ggplot(aes(service_connections_count, radius*km_to_mi)) + 
   geom_point(alpha = 0.2) + 
@@ -871,7 +892,7 @@ d %>%
 
 Service area type codes include all possible service areas of a water system--e.g. a daycare, mobile home park, residential. Because there are many permutations and possibilities, we select the top 4 service area type codes as features for the model, lump everything else into an "Other" category, and train on this feature. This reduces class imbalance across the categories. We include an interaction effect for service area type code.
 
-```{r interaction service area type code}
+```{r interaction-service-area-type-code}
 # clean service area type code column
 d <- d %>% 
   mutate(
@@ -888,7 +909,7 @@ d <- d %>%
 
 After cleaning, there are `r length((table(d$satc)))` unique service area type code combinations, and most are "RA" or "MH", indicating that most water systems serve residential areas and areas that include mobile home parks. Regression slopes appear similar, but with different y intercepts, which suggest that some service area types are larger for an equal service connection count. We may consider cleaning this further in a future iteration if domain knowledge indicates predictive power, although preliminary visual inspection (below) suggests little explanatory power.
 
-```{r service conn v radius, fig.cap="Fig 14. Interaction plot: service area type code vs. service connections"}
+```{r service-conn-v-radius, fig.cap="Interaction plot: service area type code vs. service connections"}
 # plot service connections v radius and facet by top 3 service area type code
 d %>% 
   mutate(
@@ -920,7 +941,7 @@ We first fit a random forest to the Tier 1 labeled data because the algorithm ha
 
 We fit the rand forest regression to predict radius from service connections, population, owner type, service area type code, and wholesaler status. Service connections, population served, and owner type code appear important in segmenting the feature space, and service area type code and wholesaler status appear less predictive.
 
-```{r rf vip, fig.cap="Fig 15. Random forest variable importance"}
+```{r rf-vip, fig.cap="Random forest variable importance"}
 library(tidymodels)
 library(vip)
 
@@ -973,7 +994,7 @@ rf_fit %>%
 
 Next we fit the model on the test set, plot residuals and calculate an $R^2$ goodness of fit metric and two standard metrics of error, the RMSE and MAE. For our purposes, the MAE is likely more important because it doesn't penalize outliers as much as RMSE, and we care more about the overall appropriateness of the boundary than we do about preventing large outlying errors.
 
-```{r rf fit test residuals and error, fig.cap="Fig 16. Random forest test residuals, highlighted by ownership type"}
+```{r rf-fit-test-residuals-and-error, fig.cap="Random forest test residuals, highlighted by ownership type"}
 # predict on test set
 rf_test_res <- test %>% 
   # select(radius) %>% 
@@ -1004,7 +1025,7 @@ rf_metrics(rf_test_res, truth = log10(radius), estimate = log10(.pred)) %>%
 
 Like random forest, xgboost is a tree-based method that is relatively easy to fit, and unconstrained by linear model assumptions. Variable importance metrics were consistent with those examined in the random forest model. We tuned xgboost hyperparamaters across a grid of inputs (see plot below, used to select the best xgboost model) and actually found that -- on the holdout test set -- it performed worse than the random forest in terms of goodness of fit and error. At first surprising, this result makes sense given the nature of the more flexible xgboost model, the lack of adequate data that a more flexible model like xgboost would benefit from, and the underlying functional form of the relationship we aim to model.
 
-```{r xgboost hyperparameter, fig.cap="Fig 17. XGBoost model performance across tuning grid"}
+```{r xgboost-hyperparameter, fig.cap="XGBoost model performance across tuning grid"}
 # load hyperparameter tune space
 xgb_res <- read_rds(here("src/analysis/sandbox/model_explore/etc/xgb_res.rds"))
 
@@ -1026,7 +1047,7 @@ xgb_res %>%
 
 xgboost is a flexble machine learning model: it tends to outperform random forest when there is sufficient data to segment the feature space and learn from residuals. However, in our example, we lack substantial data with only a few tens of thousands of water systems, and only 3 high importance predictors, 2 of which are highly correlated. Thus, the similar performance of xgboost and random forest may be explained by not being able to improve on random forest, and slightly overfitting to the training set, which a less flexible model like linear regression will not suffer from. In statistical terms, low flexibility models also tend to maintain low variance, meaning they perform similarly across new test sets (i.e., less bias). Finally, because the underlying functional form of the relationship being modeled is strongly linear (see the section on [Interaction Effects](#interaction-effects)), there is not a great advantage in straying from linear methods.
 
-```{r xgboost vip and residuals and performance, fig.cap="Fig 18. XGBoost variable importance"}
+```{r xgboost-vip-and-residuals-and-performance, fig.cap="XGBoost variable importance"}
 # load the best fit model
 final_xgb <- read_rds(here("src/analysis/sandbox/model_explore/etc/final_xgb.rds"))
 
@@ -1041,7 +1062,7 @@ xgb_fit %>%
 
 ```
 
-```{r xgboost residuals and performance, fig.cap="Fig 19. XGBoost test residuals"}
+```{r xgboost-residuals-and-performance, fig.cap="XGBoost test residuals"}
 # predict on test set
 xgb_test_res <- test %>% 
   select(radius) %>% 
@@ -1073,7 +1094,7 @@ As explained in the review of random forest and xgboost models above, there is s
 
 Unlike the random forest and xgboost models, we are careful to log transform log-normal predictors and response, and specify interaction terms where present. We experimented with different model specifications, including a model which combined the correlated population and service connection variables, however, this led to negligible improvement in the model fit and less interpretable model coefficients -- thus in the final model specification we regress only on service connection. Interaction terms are added for owner type, service area type code, and wholesaler status. A simple linear regression on service connections alone has an $R^2$ of 0.56; including these extra terms substantially improves the model fit ($R^2 = 0.66$) and reduces test error.
 
-```{r lm fit, fig.cap="Fig 20. Linear model residuals"}
+```{r lm-fit, fig.cap="Linear model residuals"}
 # re-read dataset and log transform the response - only for linear model
 df <- read_csv(path(staging_path, "matched_output_clean.csv")) %>% 
   mutate(radius  = log10(radius),
@@ -1146,7 +1167,7 @@ lm_test_res %>%
 
 On the test set, linear model goodness of fit is comparable to random forest, but error metrics are notably lower.
 
-```{r lm goodness of fit and error}
+```{r lm-goodness-of-fit-and-error}
 # calculate goodness of it and error metrics
 lm_metrics <- metric_set(rsq, rmse, mae)
 lm_metrics(lm_test_res, truth = radius, estimate = .pred) %>% 
@@ -1161,7 +1182,7 @@ lm_metrics(lm_test_res, truth = radius, estimate = .pred) %>%
 
 We examine model residuals across space (i.e., Tier 3 predictions - Tier 1 explicit labels) to test for spatial autocorrelation in the model residuals. Although we do not calculate standard autocorrelation metrics, a high-level examination of the residuals across states shows that Tier 3 estimates are generally consistent with observed radii (most residuals are near 0 mi - indicating strong agreement and consistent with the 1:1 predicted vs observed plot above). Notable exceptions include MO and OK, which show systematic under-estimation (negative values indicate a smaller estimated radius compared to the observed radius) on the order of around 3 miles.
 
-```{r lm spatial autocorrelation residuals, fig.cap="Fig 21. Spatial residuals (Tier 1 states)"}
+```{r lm spatial-autocorrelation-residuals, fig.cap="Spatial residuals (Tier 1 states)"}
 # Tier 3: Modeled boundaries: read and construct geometry
 t3 <- path(staging_path, "tier3_median.geojson") %>% st_read(quiet = TRUE)
 
@@ -1187,7 +1208,7 @@ t3 %>%
 
 Linear model 5 and 95% confidence intervals are calculated and provided as an output with the median radius. Importantly, the range of these predictions is relatively narrow, and generally less than 0.6 mi.
 
-```{r lm ci range distribution, fig.cap="Fig 22. Distribution of confidence interval range for modeled boundaries"}
+```{r lm-ci-range-distribution, fig.cap="Distribution of confidence interval range for modeled boundaries"}
 t<- df %>% 
   select(pwsid, radius) %>% 
   bind_cols(predict(lm_fit, df)) %>% 
@@ -1207,7 +1228,7 @@ t<- df %>%
 
 Below is an example of one Tier 3 with a typical CI range (around 0.6 mi). Toggle to the `Esri.WorldImagery` basemap to view satellite imagery of the underlying location and compare this to the estimated range of the Tier 3 estimates.
 
-```{r tier 3 cis}
+```{r tier-3-cis}
 # lm CI layers
 t3m_med <- st_read(path(staging_path, "tier3_median.geojson"), quiet = TRUE)
 t3m_cil <- st_read(path(staging_path, "tier3_ci_upper_95.geojson"), quiet = TRUE)
@@ -1230,7 +1251,7 @@ mapview(filter(t3m_med, pwsid == pwsid_select),
 
 #### Model Coefficients
 
-```{r lm coefficients, include = FALSE}
+```{r lm-coefficients, include = FALSE}
 b <- lm_fit %>% 
   extract_fit_engine() %>% 
   tidy()
@@ -1242,11 +1263,11 @@ It is also worth noting the high prevalence of high p-value coefficients, which 
 
 [^9]: The p-value in a linear regression tests the null hypothesis that the coefficient has no effect (i.e., coefficient = zero). A low p-value indicates evidence for rejecting the null hypothesis and a high p-value indicates otherwise.
 
-```{r lm coefficients table}
+```{r lm-coefficients-table}
 lm_fit %>% 
   extract_fit_engine() %>% 
   tidy() %>% 
-  knitr::kable(caption = "Table 8. Linear model coefficients for water system radii") %>% 
+  knitr::kable(caption = "Linear model coefficients for water system radii") %>% 
   kableExtra::kable_styling(full_width = FALSE)  
 ```
 
@@ -1272,7 +1293,7 @@ Where water systems match to the same TIGER boundary, the proxy boundary for tho
 
 ## The "Pancake Problem"
 
-```{r pancake problem query}
+```{r pancake-problem-query}
 # filter for pancake stacks
 pancakes <- df %>% 
   filter(geometry_quality == "COUNTY CENTROID" & 
@@ -1292,7 +1313,7 @@ big_pancake_pwsid <- pancakes %>%
 
 The "pancake problem" is fundamentally caused by low centroid accuracy (e.g., country or state centroid accuracy), and impacts PWSIDs that lack an explicit boundary (or TIGRIS match). Estimated radii for these systems result in circular buffers that overlap, like a stack of pancakes. To illustrate, we query for the biggest pancake problem (greatest number of pancakes in a single stack), which belongs to the county of `r big_pancakes$county_served[1]` in `r big_pancakes$state_code[1]` and has `r length(big_pancake_pwsid)` Tier 3 predictions.
 
-```{r pancake problem map}
+```{r pancake-problem-map}
 # visualize
 temm %>% 
   filter(pwsid %in% big_pancake_pwsid) %>% 
@@ -1314,13 +1335,13 @@ pancake_count_prop <- temm %>%
 
 Next, we quantify the count and percent of "geometry quality" values for all **Tier 3** spatial boundaries. State centroid "geometry quality" (`r filter(pancake_count_prop, geometry_quality == "STATE CENTROID") %>% pull(percent_tier3)`% of Tier 3 data) is an extreme example of the centroid accuracy issues observed in the dataset. County centroids (`r filter(pancake_count_prop, geometry_quality == "COUNTY CENTROID") %>% pull(percent_tier3)`% of Tier 3 data) are more resolved than state-level centroids and are the most common scale at which pancake stacks form. Zip code centroids (`r filter(pancake_count_prop, geometry_quality == "ZIP CODE CENTROID") %>% pull(percent_tier3)`% of Tier 3 data) form a large proportion of Tier 3 data, but pancakes at this scale are not as inaccurate as county or state centroids and may be appropriately acceptable error for most analytical purposes. Finally, not all "geometry quality" values are associated with pancakes (for example, "GPS - UNSPECIFIED" points, when plotted, clearly do not form pancake stacks), but these make up a small proportion of Tier 3 data. Most Tier 3 systems suffer from the pancake problem.
 
-```{r count pancakes by centroid accuracy}
+```{r count-pancakes-by-centroid-accuracy}
 pancake_count_prop %>% 
   knitr::kable(col.names = c("Geometry Quality", 
                              "Count", 
                              "Percent"), 
                align = rep("l", 3),
-               caption = "Table 9. Geometry quality of centroids systems with Tier 3 boundary") %>% 
+               caption = "Geometry quality of centroids systems with Tier 3 boundary") %>% 
   kableExtra::kable_styling(full_width = FALSE)  
 ```
 
@@ -1332,7 +1353,7 @@ Upstream centroid accuracy issues are beyond the scope of this study, and may be
 
 We lack labeled Tier 1 data and hence radii for tribal primacy types (and territories, although this analysis excludes them), and can't improve the model based on this information until it is collected. The model therefore, has no information on "Tribal" primacy types and all inferences are based on "State" primacy types. This may introduce error in modeled boundaries if it is found that system boundaries systematically vary based on the "primacy type" parameter.
 
-```{r primacy type proportions}
+```{r primacy-type-proportions}
 d %>% 
   group_by(primacy_type) %>% 
   filter(tier == "Tier 1") %>%
@@ -1340,7 +1361,7 @@ d %>%
   summarise(proportion_present = sum(!is.na(radius))/n(),
             proportion_present = round(proportion_present, 2)) %>% 
   knitr::kable(col.names = c("Primacy Type", "Proportion Present"),
-               caption = "Table 10. Proportion of primacy type for water systems in Tier 1") %>% 
+               caption = "Proportion of primacy type for water systems in Tier 1") %>% 
   kableExtra::kable_styling(full_width = FALSE)
 ```
 
