--- a/src/analysis/sandbox/model_explore/model_march.Rmd
+++ b/src/analysis/sandbox/model_explore/model_march.Rmd
@@ -286,7 +286,7 @@ In total, the TEMM data layer represents tap water delivery to `r round(pop_tota
 
 About `r str_sub(pop$count, 1, 3)[1]` million people are covered by Tier 1 spatial data -- impressive given that only `r wsb_labeled_clean$state %>% unique() %>% length()` states that provided explicit boundary data. However, this relatively high coverage rate is unsurprising because these states (`r wsb_labeled_clean$state %>% unique() %>% sort() %>% paste(collapse = ", ")`) include notable centers of high-population like CA, TX, and PA.
 
-Together, around `r str_sub(sum((as.numeric(str_remove_all(pop$count[1:2], ",")))), 1, 3)` million people (`r sum(pop$prop[1:2])`% of the population) are covered by either a Tier 1 or a Tier 2a spatial boundary. This is an underestimation--because many systems assigned to Tier 2b are likely to be moved to Tier 2a with further refinement. However, until further development of rules to disaggregate Tier 2b into Tier 2a and Tier 3 boundary types are developed, we evaluate the accuracy conservatively. Therefore the remaining approximately `r str_split(pop$count[3:4], ",", simplify = TRUE)[1]` million people (`r sum(pop$prop[3:4])`%) represented in the layer are covered by a less accurate, Tier 2b or Tier 3 boundary. These results indicate relatively high confidence in the spatial accuracy of the resulting TEMM water boundary layer for a majority of the population served by community water systems.
+Together, around `r str_sub(sum((as.numeric(str_remove_all(pop$count[1:2], ",")))), 1, 3)` million people (`r sum(pop$prop[1:2])`% of the population) are covered by either a Tier 1 or a Tier 2a spatial boundary. This is an underestimation--because many systems assigned to Tier 2b are likely to be moved to Tier 2a with further refinement. However, until further development of rules to disaggregate Tier 2b into Tier 2a and Tier 3 boundary types are developed, we evaluate the accuracy conservatively. Therefore the remaining approximately `r str_sub(sum((as.numeric(str_remove_all(pop$count[3:4], ",")))), 1, 3)` million people (`r sum(pop$prop[3:4])`%) represented in the layer are covered by a less accurate, Tier 2b or Tier 3 boundary. These results indicate relatively high confidence in the spatial accuracy of the resulting TEMM water boundary layer for a majority of the population served by community water systems.
 
 ```{r temm-nationwide-pop-kable}
 pop %>% 
@@ -587,7 +587,7 @@ usa <- USAboundaries::us_states(resolution = "low") %>%
 # map of missing states
 ggplot() +
   geom_sf(data = usa, aes(fill = status), alpha = 0.5, color = "white") +
-  scale_fill_carto_d(palette = "Pastel") +
+  scale_fill_carto_d(palette = "Pastel", direction = -1) +
   labs(fill = "") +
   theme_void() + 
   labs(title = "Labeled data coverage by state",
